--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -211,27 +211,27 @@ $( document ).ready(function() {
          <h3>Actions</h3>
          <div class=menu>
 	      <div class=item>
-	       <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram
+	       <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram (1 month)
 	       </a>
 	      </div>
 	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=wall_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Wall Clock Time Histogram
+	       <a href="{{pomspath}}/jobs_time_histo?timetype=wall_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Wall Clock Time Histogram (1 month)
 	       </a>
               </div>
 	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=cpu_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job CPU Time Histogram
+	       <a href="{{pomspath}}/jobs_time_histo?timetype=cpu_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job CPU Time Histogram (1 month)
 	       </a>
               </div>
 	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_in_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Copy In Time Histogram
+	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_in_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Copy In Time Histogram (1 month)
 	       </a>
               </div>
 	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_out_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
+	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_out_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
 		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Copy Out Time Histogram
 	       </a>
               </div>
