more tests passing

--- a/webservice/templates/failed_jobs_by_whatever.html
+++ b/webservice/templates/failed_jobs_by_whatever.html
@@ -5,7 +5,7 @@ POMS: Failed Jobs
 {%endblock%}
 
 {%block header%}
-Jobs by {{columns[:-1]|join(',')}} {%include 'help_button.html'%}
+Jobs by {{columns|join(',')}} {%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
