--- a/webservice/templates/raw_tables.html
+++ b/webservice/templates/raw_tables.html
@@ -13,8 +13,9 @@ Raw Tables:
 {%endblock%}
 
 {%block content%}
+<!-- tlist: {{tlist}} -->
 <ul>
-   {% for type in list|sort %}
+   {% for type in tlist|sort %}
     <li> <a href="{{pomspath}}/list_generic?classname={{type}}">{{type}}</a> </li>
    {% endfor %}
 </ul>
