--- a/webservice/templates/campaign_deps.html
+++ b/webservice/templates/campaign_deps.html
@@ -20,9 +20,11 @@ POMS Campaign Dependencies
 
 {%block content %}
 
-<svg style="width:100%; border: 1px solid grey; padding: 1em;">
+<div style="width:100%; height: 40em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll">
+<svg style="width:200%; height: 300em ">
    {{svgdata}}
 </svg>
+</div>
 
 {%endblock%}
 
