--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -28,7 +28,7 @@
   <div data-ecl class="item">
     <div class="header">Logbook</div>
     <div class="menu">
-        <a class="item" href="{{exp_obj.logbook if exp_obj else '#'}}">{{session_experiment|capitalize}}</a>
+        <a class="item" href="{{exp_obj.logbook if exp_obj else '#'}}" target="_blank">{{session_experiment|capitalize}}</a>
     </div>
     <div class="header">Service Now</div>
     <div class="menu">
