Service now comes up in a new tab/window.

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -32,7 +32,7 @@
     </div>
     <div class="header">Service Now</div>
     <div class="menu">
-        <a class="item" href="{{exp_obj.snow_url if exp_obj else '#'}}">POMS Service Page</a>
+        <a class="item" href="{{exp_obj.snow_url if exp_obj else '#'}}" target="_blank">POMS Service Page</a>
     </div>
   </div>
 
