--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -184,6 +184,7 @@ Job Types {%include 'help_button.html'%}
       <div class="actions">
 	<div class="ui button deny red">Cancel</div>
 	<input type="submit" value="Submit" class="ui button teal" {{ 'disabled' if (data.authorized==False) }}/>
+	<input type="submit" name="test_template" value="Test" class="ui button orange" {{ 'disabled' if (data.authorized==False) }}/>
       </div>
       <input type="hidden" name="experiment" value="{{ data.curr_experiment if data.curr_experiment is defined}}">
       <input type="hidden" name="action" id="ae_definition_action" value="add">
