add dependency info to campaign_info page

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -313,6 +313,14 @@ $( document ).ready(function() {
     <b>Updated</b>: {{Campaign_definition_info.CampaignDefinition.updated}}<br>
     <b>
     </div>
+   <div class="ui segment raised">
+    Dependencies
+    <div style="width:100%; height: 40em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll">
+      <svg style="width:200%; height: 300em ">
+      {{dep_svg}}
+      </svg>
+    </div>
+  </div>
   </div>
     <div class="ui segment raised">
     <h3>Launch Template</h3>
