--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -222,7 +222,11 @@ Campaign Stages{%include 'help_button.html'%}
             }
 
             tag = $('#tag_field').val()
-            $.post('link_tags', { tag_name: tag, campaign_id: "{{Campaign.campaign_id}}", experiment: "{{session_experiment}}"}, function (data) {
+            $.post('link_tags', {
+                        tag_name: tag,
+                        campaign_id: $("#tag_campaign_ids").val(),
+                        experiment: "{{session_experiment}}"
+                    }, function (data) {
 
                 if (data.msg == "OK") {
                     var campaigns_tags_composite_key = data.campaign_id.toString() + "_" + data.tag_id.toString();
