--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -29,7 +29,14 @@ POMS: Campaign Stages
 
         $.getJSON('search_all_tags?cl='+csv.join(','), function (data) {
             if (data.msg == "OK") {
-                $('#response').html(data.result);
+                // $('#response').html(data.result);
+                for (const tag_name of data.result) {
+                    var new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${tag_name}_">${tag_name}</a>`;
+                    var new_trash_can = `<i class="trash outline icon link poms_tag" id="${tag_name}"></i>`;
+                    $('#tag_container').append(new_trash_can);
+                    $('#tag_container').append(new_tag);
+                    add_click_handler();
+                }
             }
             else {
                 $('#response').html(data.msg);
