--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -35,7 +35,7 @@ POMS: Campaign Stages
                     var new_trash_can = `<i class="trash outline icon link poms_tag" id="${tag_name}"></i>`;
                     $('#tag_container').append(new_trash_can);
                     $('#tag_container').append(new_tag);
-                    add_click_handler();
+                    // add_click_handler();
                 }
             }
             else {
