--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -3,57 +3,6 @@
 {%block title%}
 POMS: Campaign Stages
 
-<script>
-    function pop_mark_inactive_modal() {
-        mod_form = $("#mark_inactive_modal").modal('show');
-        var csv = [];
-        // find only visible rows; we're ignoring filtered/hidden rows
-        $("#campaigns").find('tbody tr:visible').find('td:nth-child(1)').each(function() {
-            csv.push($(this).text());
-        });
-        mod_form.find('span').html("Mark " + csv.length + " selected campaigns as ");
-        console.log("csv="+csv);
-        $("#campaign_ids").val(csv.join(','))
-    }
-
-    function pop_tag_untag_modal() {
-        mod_form = $("#tag_untag_modal").modal('show');
-        var csv = [];
-        // find only visible rows; we're ignoring filtered/hidden rows
-        $("#campaigns").find('tbody tr:visible').find('td:nth-child(1)').each(function() {
-            csv.push($(this).text());
-        });
-        mod_form.find('span').html("Tag " + csv.length + " selected campaigns...");
-        console.log("csv="+csv);
-        $("#tag_campaign_ids").val(csv.join(','))
-
-        $.getJSON('search_all_tags?cl='+csv.join(','), function (data) {
-            if (data.msg == "OK") {
-                // $('#response').html(data.result);
-                for (const tag_name of data.result) {
-                    var new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${tag_name}_">${tag_name}</a>`;
-                    var new_trash_can = `<i class="trash outline icon link poms_tag" id="${tag_name}"></i>`;
-                    $('#tag_container').append(new_trash_can);
-                    $('#tag_container').append(new_tag);
-                    // add_click_handler();
-                }
-            }
-            else {
-                $('#response').html(data.msg);
-            }
-        });
-    }
-
-    function show_stats() {
-        var csv = [];
-        // find only visible rows; we're ignoring filtered/hidden rows
-        $("#campaigns").find('tbody tr:visible').find('td:nth-child(1)').each(function() {
-            csv.push($(this).text());
-        });
-        console.log("csv="+csv);
-        location.href = "./show_campaigns?cl=" + csv.join(',');
-    }
-</script>
 
 {%endblock%}
 
@@ -272,6 +221,58 @@ Campaign Stages{%include 'help_button.html'%}
 
     });
   </script>
+
+  <script>
+        function pop_mark_inactive_modal() {
+            mod_form = $("#mark_inactive_modal").modal('show');
+            var csv = [];
+            // find only visible rows; we're ignoring filtered/hidden rows
+            $("#campaigns").find('tbody tr:visible').find('td:nth-child(1)').each(function() {
+                csv.push($(this).text());
+            });
+            mod_form.find('span').html("Mark " + csv.length + " selected campaigns as ");
+            console.log("csv="+csv);
+            $("#campaign_ids").val(csv.join(','))
+        }
+
+        function pop_tag_untag_modal() {
+            mod_form = $("#tag_untag_modal").modal('show');
+            var csv = [];
+            // find only visible rows; we're ignoring filtered/hidden rows
+            $("#campaigns").find('tbody tr:visible').find('td:nth-child(1)').each(function() {
+                csv.push($(this).text());
+            });
+            mod_form.find('span').html("Tag " + csv.length + " selected campaigns...");
+            console.log("csv="+csv);
+            $("#tag_campaign_ids").val(csv.join(','))
+
+            $.getJSON('search_all_tags?cl='+csv.join(','), function (data) {
+                if (data.msg == "OK") {
+                    // $('#response').html(data.result);
+                    for (const tag_name of data.result) {
+                        var new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${tag_name}_">${tag_name}</a>`;
+                        var new_trash_can = `<i class="trash outline icon link poms_tag" id="${tag_name}"></i>`;
+                        $('#tag_container').append(new_trash_can);
+                        $('#tag_container').append(new_tag);
+                        add_click_handler();
+                    }
+                }
+                else {
+                    $('#response').html(data.msg);
+                }
+            });
+        }
+
+        function show_stats() {
+            var csv = [];
+            // find only visible rows; we're ignoring filtered/hidden rows
+            $("#campaigns").find('tbody tr:visible').find('td:nth-child(1)').each(function() {
+                csv.push($(this).text());
+            });
+            console.log("csv="+csv);
+            location.href = "./show_campaigns?cl=" + csv.join(',');
+        }
+</script>
 
   <script>
     var protocol = window.location.protocol;
