--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -231,9 +231,10 @@ Campaign Stages{%include 'help_button.html'%}
         $.getJSON('search_all_tags?cl='+csv.join(','), function (data) {
             if (data.msg == "OK") {
                 // $('#response').html(data.result);
-                for (const tag_name of data.result) {
-                    var new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${tag_name}_">${tag_name}</a>`;
-                    var new_trash_can = `<i class="trash outline icon link poms_tag" id="${tag_name}"></i>`;
+                for (const tag of data.result) {
+                    const [tag_id, tag_name] = tag
+                    var new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="tag_${tag_id}_">${tag_name}</a>`;
+                    var new_trash_can = `<i class="trash outline icon link poms_tag" id="tag_${tag_id}"></i>`;
                     $('#tag_container').append(new_trash_can);
                     $('#tag_container').append(new_tag);
                     add_click_handler();
